Don't warn about unsaved changes when closing if blank and unsaved

In the case where the document is marked as modified, but is both blank
and unsaved, there's no reason to pester the user about unsaved changes
because there are no unsaved changes. So in this case, let's not bug
them about it.

BUG: 391208
FIXED-IN: 5.81